# break-time

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  default.nix  nixpkgs.nix  shell.nix
.github/workflows/: ci.yml
examples/: example-xcb-app.rs
glade/: ui.glade
src/: config.rs  css.rs  lib.rs  main.rs  opts.rs  prelude.rs  scheduler.rs  state.rs  tray.rs  ui.rs  x11.rs
src/config/: default.rs
src/scheduler/: idle_detector.rs  plugins.rs
src/scheduler/plugins/: google_calendar.rs  window_titles.rs
src/ui/: builder.rs  prelude.rs  state.rs
