[package]
name = "break-time"
version = "0.1.0"
authors = ["cdepillabout@gmail.com"]
edition = "2018"
description = "An app to force you to take breaks regularly while using the computer"
license = "MIT"
repository = "https://github.com/cdepillabout/break-time"
readme = "README.md"
keywords = ["gtk", "break", "reminder", "gui"]
categories = ["gui"]

[dependencies]
gdk = "0.12.0"
gio = "0.8.0"
glib = "0.9.1"
glib-sys = "0.9.1"
gtk-sys = "0.9.2"
pango = "0.8.0"
structopt = "0.3.9"

[dependencies.gtk]
version = "0.8.0"
features = ["v3_22"]

[dev-dependencies.xcb]
version = "0.9.0"
features = ["randr"]
