[package]
name = "break-time"
version = "0.1.0"
authors = ["cdepillabout@gmail.com"]
edition = "2018"
description = "An app to force you to take breaks regularly while using the computer"
license = "MIT"
repository = "https://github.com/cdepillabout/break-time"
readme = "README.md"
keywords = ["gtk", "break", "reminder", "gui"]
categories = ["gui"]
default-run = "break-time"

[dependencies]
byteorder = "1.3.4"
chrono = "0.4"
structopt = "0.3.9"
# libappindicator = "0.5.1"
# tempfile = "3.1.0"
xdg = "2.2.0"

# deps for GTK
gdk = "0.12.0"
gdk-pixbuf = "0.8.0"
gdk-pixbuf-sys = "0.9.1"
gio = "0.8.0"
glib = "0.9.1"
glib-sys = "0.9.1"
gobject-sys = "0.9.1"
gtk-sys = "0.9.2"
pango = "0.8.0"

# deps for google-calendar3
google-calendar3 = "^1.0"
hyper = "^0.10"
hyper-rustls = "^0.6"
serde = "^1.0"
serde_json = "^1.0"
yup-oauth2 = "^1.0"

[dependencies.cairo-rs]
version = "0.8.1"
features = ["png"]

[dependencies.gtk]
version = "0.8.0"
features = ["v3_22"]

[dependencies.xcb]
version = "0.9.0"
features = ["randr", "screensaver", "thread"]
